--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
   - sudo mv ./orbit /usr/local/bin && chmod +x /usr/local/bin/orbit
 
 script:
-  - orbit run up ci
+  - orbit run ci
   - bash <(curl -s https://codecov.io/bash)
