--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
   }
   ],
   "require" : {
-    "php" : ">=7.1"
+    "php" : ">=7.1",
+    "symfony/console": "^4.0",
+    "symfony/yaml": "^4.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
