--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require" : {
     "php" : ">=7.1",
     "symfony/console": "^4.0",
-    "symfony/yaml": "^4.0"
+    "symfony/yaml": "^4.0",
+    "symfony/process": "^4.1"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
