--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php" : ">=7.1",
     "symfony/console": "^4.0",
     "symfony/yaml": "^4.0",
-    "symfony/process": "^4.1"
+    "symfony/process": "^4.1",
+    "symfony/finder": "^4.1"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
