--- a/orbit.yml
+++ b/orbit.yml
@@ -3,7 +3,7 @@ tasks:
   - use: bash
     short: For composer only!
     run:
-      - docker run --rm -ti thecodingmachine/php:7.2-v1-cli bash
+      - docker run --rm -ti -v "$(pwd):/usr/src/app" thecodingmachine/php:7.2-v1-cli bash
 
   - use: lint
     run:
