--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "symfony/console": "^4.0",
     "symfony/yaml": "^4.0",
     "symfony/process": "^4.1",
-    "symfony/finder": "^4.1"
+    "symfony/finder": "^4.1",
+    "psr/log": "^1"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
