--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
     "symfony/yaml": "^4.0",
     "symfony/process": "^4.1",
     "symfony/finder": "^4.1",
+    "symfony/filesystem": "^4.1",
     "psr/log": "^1",
-    "theaentmachine/aent-console": "^1",
-    "symfony/filesystem": "^4.1"
+    "guzzlehttp/guzzle": "^6.3.3",
+    "theaentmachine/aent-console": "^1"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
