--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,25 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Julien Neuhart",
-      "email": "j.neuhart@thecodingmachine.com",
-      "homepage": "https://github.com/gulien"
-    },
-    {
       "name": "Jindun Shao",
       "email": "j.shao@thecodingmachine.com",
       "homepage": "https://github.com/JinTotonic"
+    },
+    {
+      "name": "Julien Neuhart",
+      "email": "j.neuhart@thecodingmachine.com",
+      "homepage": "https://github.com/gulien"
     }
   ],
   "require": {
     "php": ">=7.1",
     "symfony/yaml": "^4.0",
-    "symfony/process": "^4.1",
-    "symfony/finder": "^4.1",
     "symfony/filesystem": "^4.1",
-    "psr/log": "^1",
     "guzzlehttp/guzzle": "^6.3.3",
     "theaentmachine/aent-console": "^1"
   },
   "require-dev": {
+    "roave/security-advisories": "dev-master",
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.3.0",
     "phpstan/phpstan": "^0.10.1",
