--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
   ],
   "require": {
     "php": ">=7.1",
-    "symfony/filesystem": "^4.1",
-    "guzzlehttp/guzzle": "^6.3.3",
-    "theaentmachine/aent-console": "^1"
+    "theaentmachine/aent-console": "1.0.x-dev",
+    "thecodingmachine/safe": "^0.1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.3.1",
     "phpstan/phpstan": "^0.10.2",
-    "thecodingmachine/phpstan-strict-rules": "^0.10.3"
+    "thecodingmachine/phpstan-strict-rules": "^0.10.3",
+    "thecodingmachine/phpstan-safe-rule": "^0.1.0@dev"
   },
   "autoload": {
     "psr-4": {
